# linux-release-fetcher

./: .dockerignore  Cargo.toml  Dockerfile  oci.json
.github/workflows/: build.yaml
src/: kernel.rs  listing.rs  main.rs  zfs.rs
