[package]
name = "linux-release-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.2", features = ["tokio", "http2"], default-features = false }
tokio = { version = "1.43.0", features = ["sync", "net"], default-features = false }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls", "hickory-dns"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
scraper = "0.22.0"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
panic = "abort"