[package]
name = "linux-release-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0", features = ["tokio", "http2"], default-features = false }
tokio = { version = "1", features = ["sync", "net"], default-features = false }
reqwest = { version = "0", features = ["json", "rustls-tls", "hickory-dns"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0"

[profile.release-lto]
inherits = "release"
lto = true
strip = true
panic = "abort"
